@@ -2,7 +2,6 @@
 // $Id$
 
 #include "PSL_SampleLost_Sender_exec.h"
-#include "ace/Guard_T.h"
 #include "ace/Log_Msg.h"
 #include "tao/ORB_Core.h"
 #include "ace/Reactor.h"
